--- a/main.css
+++ b/main.css
@@ -14,9 +14,7 @@ body {
 }
 
 h1 {
-    border-radius: 20px;
     text-indent: 10px;
-    background: darkgray;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
@@ -39,6 +37,31 @@ h4 {
     text-align: center;
     background: darkgray;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+nav {
+    width: 100%;
+    background-color:darkgray;
+    text-align: center;
+    padding: 10px 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+nav ul{
+    list-style: none;
+    margin: 0 2px;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav a {
+    font-weight: normal;
+    padding: 10px 5px;
+}
+nav a:hover {
+    background-color: black;
+    font: white;
 }
 
 p {
