Add File Headers

--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+/*
+Name       :Brendon King
+Class      :CS 2550
+Title      :Battleship
+Description:Semester project for CS 2550 at Utah Valley University.
+*/
 body {
     
 }
