--- a/styles/main.css
+++ b/styles/main.css
@@ -61,9 +61,13 @@ caption {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
-td {
+td, th {
     table-layout: fixed;
     width: 25px;
     height: 25px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+td:hover {
+  background: darkgray;
 }
