--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,22 @@ body {
     clear: both;
 }
 
+.controls {
+    padding: 15px;
+    margin-left: 40px;
+    margin-right: 40px;
+    align-content: center;
+    background: lightgray;
+    border: black;
+}
+
+button {
+    display: block;
+    height: 25px;
+    width: 150px;
+    padding-left: 5px;
+}
+
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
@@ -66,8 +82,13 @@ table {
 }
 
 td, th {
+    table-layout: fixed;
     text-align: center;
     width: 40px;
     height: 40px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+td:hover {
+  style: background:darkgray;
 }
