--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,10 @@ body {
 }
 
 .controls {
-    padding: 15px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    padding-top: 1px;
     margin-left: 40px;
     margin-right: 40px;
     align-content: center;
