--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,11 @@ body {
     width: 50%;
 }
 
+.grid {
+    float: left;
+    width: 50%;
+}
+
 .row:after {
     content: "";
     display: table;
@@ -89,7 +94,7 @@ td, th {
     table-layout: fixed;
     text-align: center;
     border: #1a1b1d;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
