--- a/styles/main.css
+++ b/styles/main.css
@@ -96,6 +96,10 @@ td, th {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
+td:hover {
+    background-color:green;
+}
+
 .hit {
     background-color:red;
 }
@@ -106,4 +110,18 @@ td, th {
 
 .miss {
     background-color:blue;
+}
+
+#container {
+    width: 500px;
+    height: 500px;
+    position: relative;
+    background: lightblue;
+}
+
+#animate {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background: blue;
 }
